# noiz

./: Cargo.toml  README.md
.github/workflows/: ci.yml
book/src/: SUMMARY.md
book/src/changelogs/: release-0-3.md  release-0-4.md  release-0-5.md
book/src/more-info/: learning-resources.md
book/src/quick-start/: smooth-noise.md
changelog/: release_0-4.md  release_0-5.md  release_0-6.md
examples/: heightmap.rs  show_gradients.rs  show_noise.rs
src/: cell_noise.rs  cells.rs  curves.rs  layering.rs  lengths.rs  lib.rs  math_noise.rs  rng.rs
