[package]
name = "noiz"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["noise", "bevy", "math", "graphics", "random"]
categories = [
  "no-std::no-alloc",
  "no-std",
  "mathematics",
  "game-development",
  "graphics",
]
readme = "README.md"
repository = "https://github.com/ElliottjPierce/noiz"
homepage = "https://github.com/ElliottjPierce/noiz"
documentation = "https://docs.rs/noiz"
authors = ["Elliott Pierce"]
description = "A simple, configurable, blazingly fast noise library built for and with Bevy."

[dependencies]
bevy_math = { version = "0.18.1", default-features = false, features = ["curve"] }
bevy_reflect = { version = "0.18.1", default-features = false, features = [
  "glam",
], optional = true }
serde = { version = "1", default-features = false, features = [
  "derive",
], optional = true }

[dev-dependencies]
# for examples
bevy = "0.18"

# For benches
criterion = "0.5"
fastnoise-lite = "1.1"
noise = "0.9"
libnoise = "1.1"

[features]
default = ["std", "bevy_reflect", "serialize"]

std = ["bevy_math/std", "bevy_reflect?/std", "serde?/std"]
libm = ["bevy_math/libm"]
nostd-libm = ["bevy_math/nostd-libm"]

serialize = ["dep:serde", "bevy_math/serialize"]
bevy_reflect = ["dep:bevy_reflect"]
debug = []

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 1

[profile.release]
# Maximum Link Time Optimization for best performance
lto = "fat"
# Single codegen unit maximizes optimization opportunities
codegen-units = 1
# Disable incremental compilation for maximum optimization
incremental = false
opt-level = 3

[build]
rustflags = ["-O"]


[lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"
needless_lifetimes = "allow"
too_many_arguments = "allow"
nonstandard_macro_braces = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

too_long_first_doc_paragraph = "allow"

std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"

allow_attributes = "warn"
allow_attributes_without_reason = "warn"

[lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[[example]]
name = "show_noise"
path = "examples/show_noise.rs"

[[example]]
name = "show_gradients"
path = "examples/show_gradients.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "heightmap"
path = "examples/heightmap.rs"

[[bench]]
name = "compare"
path = "benches/compare/main.rs"
harness = false
